TS-3151: Extra check for background fill to avoid crash.